Fixed Project Scroll Spacing for First Child

--- a/assets/css/partials/_elements.scss
+++ b/assets/css/partials/_elements.scss
@@ -108,7 +108,7 @@
     }
 
     .project:first-child {
-        margin-top: 0;
+        margin-top: 4rem;
     }
 
         .project-image-wrapper {
